hphp/hack/test/typecheck/magic_methods/magic_isset.php.exp
File "magic_isset.php", line 4, characters 3-32:
Magic `__isset` methods are no longer supported (Parsing[1002])
