hphp/hack/test/typecheck/magic_methods/magic_isset.php
<?hh

class C {
  public function __isset():void {}
}
